--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
+<link rel="icon" type="image/ico" href="/favicon.ico">
 <p>SIPG.RU</p>
 
 <!-- Yandex.Metrika counter -->
