--- a/index.html
+++ b/index.html
@@ -1,21 +1,74 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
+
 <link rel="icon" type="image/ico" href="/favicon.ico">
-<p>SIPG.RU</p>
+<link rel="stylesheet" href="/assets/css/common.css">
+<link rel="stylesheet" href="/assets/css/index.css">
+
+<script defer src="/assets/scripts/params.js"></script>
+<script defer src="/assets/ruffle/ruffle.js"></script>
+
+<header class="header">
+    <a href="/" class="header__logo"></a>
+    <h1 class="header__title">Special Internet Project Group Museum</h1>
+</header>
+
+<main class="info">
+    <div class="info__dusko">
+        <object class="info__dusko-screw">
+            <param name="movie" value="/assets/images/ok.swf">
+            <param name="wmode" value="transparent">
+        </object>
+    </div>
+    <div class="info__text">
+        <div class="info__title">
+            Мы никогда не спали. Мы делали сайты…
+        </div>
+        <div class="info__about">
+            Дизайн-студия SIPG существовала с&nbsp;февраля 2007&nbsp;года.
+            Закончила она свою историю в&nbsp;пандемию <nobr>2020-2022 годов.</nobr>
+            <br>
+            Направлениями работы были:
+        </div>
+        <div class="info__icons categories">
+            <div class="categories__icon categories__icon_design">
+                <div class="categories__title">Веб-дизайн и создание сайтов</div>
+            </div>
+            <div class="categories__icon categories__icon_fir-style">
+                <div class="categories__title">Логотипы и фирменный стиль</div>
+            </div>
+            <div class="categories__icon categories__icon_optimization">
+                <div class="categories__title">Оптимизация и поддержка сайтов</div>
+            </div>
+        </div>
+    </div>
+</main>
+
+<footer class="footer">
+    Последняя зафиксированная версия сайта SIPG
+    <a href="https://web.archive.org/web/20190501151547/http://sipg.ru/">
+        на Internet Archive
+    </a>
+</footer>
 
 <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();
-   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+<script type="text/javascript">
+    (function(m, e, t, r, i, k, a) {
+        m[i] = m[i] || function() {(m[i].a = m[i].a || []).push(arguments);};
+        m[i].l = 1 * new Date();
+        for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+        k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(
+            k, a);
+    })
+    (window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js', 'ym');
 
-   ym(97200730, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true
-   });
+    ym(97200730, 'init', {
+        clickmap: true,
+        trackLinks: true,
+        accurateTrackBounce: true,
+    });
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/97200730" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<noscript>
+    <div><img src="https://mc.yandex.ru/watch/97200730" style="position:absolute; left:-9999px;" alt="" /></div>
+</noscript>
 <!-- /Yandex.Metrika counter -->
