--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
 <link rel="stylesheet" href="/assets/css/common.css">
 <link rel="stylesheet" href="/assets/css/index.css">
 
-<script defer src="/assets/scripts/params.js"></script>
-<script defer src="/assets/ruffle/ruffle.js"></script>
+<script src="/assets/ruffle/ruffle.js"></script>
+<script src="/assets/scripts/params.js"></script>
 
 <header class="header">
     <a href="/" class="header__logo"></a>
