--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<meta charset=utf-8>
+<meta charset="utf-8">
+<title>Музей SIPG — Ошибка 404</title>
 
 <link rel="icon" type="image/ico" href="/favicon.ico">
 <link rel="stylesheet" href="/assets/css/common.css">
