--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
+<title>Музей SIPG</title>
 
 <link rel="icon" type="image/ico" href="/favicon.ico">
 <link rel="stylesheet" href="/assets/css/common.css">
