--- a/404.html
+++ b/404.html
@@ -5,6 +5,8 @@
 <link rel="icon" type="image/ico" href="/favicon.ico">
 <link rel="stylesheet" href="/assets/css/common.css">
 <link rel="stylesheet" href="/assets/css/index.css">
+<link rel="preload" href="/assets/images/ok.swf" as="fetch" crossorigin="anonymous">
+<link rel="preload" href="/assets/images/seo_optimization.jpg" as="image">
 
 <script src="/assets/ruffle/ruffle.js"></script>
 <script src="/assets/scripts/params.js"></script>
