--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="/assets/css/index.css">
 <link rel="preload" href="/assets/images/ok.swf" as="fetch" crossorigin="anonymous">
 
+<meta name="X-Powered-By" content="a/487; 4.8.15.16.23.42">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <script src="/assets/ruffle/ruffle.js"></script>
 <script src="/assets/scripts/params.js"></script>
 
