--- a/404.html
+++ b/404.html
@@ -2,6 +2,9 @@
 <meta charset="utf-8">
 <title>Музей SIPG — Ошибка 404</title>
 
+<meta name="X-Powered-By" content="a/487; 4.8.15.16.23.42">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link rel="icon" type="image/ico" href="/favicon.ico">
 <link rel="stylesheet" href="/assets/css/common.css">
 <link rel="stylesheet" href="/assets/css/index.css">
